Reestructuración del proyecto e inclusión de Tests y Docker